--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,15 @@
+*{
+    background-color:beige;
+}
+.resume{
+    display:flex;
+}
+.nameimg{
+    display:flex;
+}
+.aboutme h2{
+    border-bottom: 2px solid blue;;
+}
 img{
 	width:100px;
 	height:100px;
@@ -6,12 +18,6 @@ img{
 p{
 	margin:0px;
 	padding:2px;
-}
-.profile{
-	display:flex;
-}
-h1{
-	margin-top:0px;
 }
 .materialicons{
 	height:50px;
